# sheet

./: .gitignore  404.html  LICENSE  README.md  hubconf.py  index.html  install.sh  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml
assets/: example_results.csv
benchmarking/: index.html
docs/: benchmarking.md  index.md  mos-bench.md  training.md
egs/: README.md
egs/BENCHMARKS/: READMD.md  README.md  get_all_bencmarks.sh  get_all_bencmarks_installation_free.sh  run_all_bencmarks.sh  run_all_bencmarks_np.sh  run_bc19_test.sh  run_bc23_test.sh  run_brspeechmos_test.sh  run_bvcc_test.sh  run_es_tts_mos.sh  run_hablamos_test.sh  run_nisqa_test.sh  run_qualispeech_test.sh  run_singmos_pro_test.sh  run_singmos_test.sh  run_somos_test.sh  run_svcc23_test.sh  run_tcd_voip_test.sh  run_tmhint_qi_s_test.sh  run_tmhint_qi_test.sh  run_ttsds2_test.sh  run_vmc23_test.sh  run_vmc24_track3_test.sh
egs/TEMPLATE/: run.sh
egs/TEMPLATE/local/: data_prep.py
egs/bc19/local/: data_download.sh  data_prep.py
egs/bc23/local/: data_download.sh  data_prep.py
egs/bvcc/: BENCHMARKS  README.md  path.sh  run.sh
egs/bvcc+nisqa+pstn+singmos+somos+tencent+tmhint-qi/: run.sh
egs/bvcc+somos+singmos+nisqa+tmhint-qi+tencent+pstn+urgent2024-mos/: run.sh
egs/nisqa/: README.md  run.sh
egs/pstn/: README.md  run.sh
egs/singmos/: README.md  run.sh
egs/somos/: BENCHMARKS  README.md  run.sh
egs/tencent/: README.md  run.sh
egs/tmhint-qi/: README.md  run.sh
egs/urgent2024-mos/: run.sh
mos-bench/: index.html
pretrained-models/: index.html
search/: search_index.json
sheet/: warmup_lr.py
sheet/collaters/: non_intrusive.py
sheet/datasets/: __init__.py  non_intrusive.py
sheet/evaluation/: metrics.py  plot.py
sheet/losses/: __init__.py  basic_losses.py  contrastive_loss.py  nll_losses.py
sheet/models/: __init__.py  alignnet.py  ldnet.py  sslmos.py  sslmos_u.py  utmos.py
sheet/modules/: asp.py  utils.py
sheet/nonparametric/: datastore.py
sheet/schedulers/: __init__.py  schedulers.py
sheet/trainers/: __init__.py  base.py  non_intrusive.py
sheet/utils/: download.py  model_io.py  utils.py
tools/: Makefile
training/: index.html
utils/: BENCHMARKS  calculate_diversity.py  calculate_metrics.py  calculate_nll_atsip.py  combine_datasets.py  draw_retrieval_id_heatmap.py  inspect_csv.py  plot_embeddings.py  prettytable_results.py  prettytable_results_atsip.py  prettytable_results_atsip_custom.py  prettytable_results_mosbenchv2.py  print_seeds_results.py  process_model_for_hf_upload.py  run_speechlmscore.sh  subsample.py  taslp_resubmit_redraw_predictions_scatter_plot.py  taslp_resubmit_tsne_datastore.py
(+72 files in other folders)
