[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sheet"
version = "0.2.5"
description = "Speech Human Evaluation Estimation Toolkit (SHEET)"
requires-python = "==3.10.13"

authors = [
    { name = "Wen-Chin Huang", email = "wen.chinhuang@g.sp.m.is.nagoya-u.ac.jp" }
]

dependencies = [
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "numpy==1.26.4",
    "h5py>=3.15.1",
    "pyyaml>=6.0.3",
    "transformers>=4.57.1",
    "scipy>=1.15.3",
    "soundfile>=0.13.1",
    "soxr>=1.0.0",
    "wheel>=0.45.1",
    "s3prl>=0.4.18",
]

[project.optional-dependencies]
train = [
    "matplotlib>=3.10.7",
    "tqdm>=4.67.1",
    "gdown",
    "tensorboardx>=2.6.4",
    "kaldiio>=2.14.1",
    "humanfriendly>=10.0",
    "prettytable>=3.16.0",
]

[tool.setuptools]
packages = [
    "sheet"
]
