[options]
packages = find:
install_requires =
    librosa >= 0.8.0
    soundfile>=0.10.2
    tensorboardX
    matplotlib>=3.1.0
    pyyaml
    tqdm>=4.26.1
    kaldiio>=2.14.1
    h5py>=2.9.0
    yq>=2.10.0
    gdown
    filelock
    protobuf<=3.20.1
    scipy
    pysptk
    s3prl
    humanfriendly
    prettytable
    faiss-cpu

[options.entry_points]
# console_scripts =

[metadata]
name = sheet
version = 0.1.0
author = Wen-Chin Huang
author_email = wen.chinhuang@g.sp.m.is.nagoya-u.ac.jp
description = Speech Human Evaluation Estimation Toolkit (SHEET)
keywords = speech quality assessment
license = MIT
long_description=README.md
long_description_content_type=text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
