[options]
packages = find:
install_requires =
    librosa >= 0.8.0
    soundfile>=0.10.2
    pyyaml
    h5py>=2.9.0
    filelock
    protobuf<=3.20.1
    scipy
    s3prl
    faiss-cpu

[options.extras_require]
train = 
    matplotlib>=3.1.0
    tqdm>=4.26.1
    gdown
    tensorboardX
    kaldiio>=2.14.1
    humanfriendly
    prettytable

[metadata]
name = sheet_sqa
version = 0.2.4
author = Wen-Chin Huang
author_email = wen.chinhuang@g.sp.m.is.nagoya-u.ac.jp
description = Speech Human Evaluation Estimation Toolkit (SHEET)
keywords = speech quality assessment
license = MIT
url = https://github.com/unilight/sheet
project_urls =
    Source = https://github.com/unilight/sheet
    Tracker = https://github.com/unilight/sheet/issues
long_description=README.md
long_description_content_type=text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

